--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bitcore-message",
+  "name": "fcash-message",
   "version": "1.0.3",
-  "description": "Bitcoin Messages for Bitcore",
+  "description": "Bitcoin Messages for Fcash",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
   "scripts": {
@@ -20,13 +20,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcore-message.git"
+    "url": "https://github.com/fcash-project/fcash-message.git"
   },
   "dependencies": {
-    "bitcore-lib": "^0.13.7"
+    "fcash-lib": "^0.13.7"
   },
   "devDependencies": {
-    "bitcore-build": "bitpay/bitcore-build",
+    "fcash-build": "bitpay/fcash-build",
     "brfs": "^1.3.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10"
