--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fcash-lib": "^0.13.7"
   },
   "devDependencies": {
-    "fcash-build": "fcash-project/fcash-build",
+    "fcash-build": "fcash-js/fcash-build",
     "brfs": "^1.3.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10"
